--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -11,14 +11,17 @@ My =init.el= sets up MELPA in the package manager and installs =use-package.el= 
   (setq use-package-always-ensure t)
 #+end_src
 
-Start Emacs maximized.
-#+begin_src emacs-lisp
-  (toggle-frame-maximized)
-#+end_src
-
+** Environment
 Tell emacs where our linux configuration document lives.
 #+begin_src emacs-lisp
   (setq linux-configuration-directory "~/projects/fedora-environment/")
+#+end_src
+
+** Private Config
+Load the private configuration, setting variables and such.
+#+begin_src emacs-lisp
+  (load (concat user-emacs-directory "npg-private.el"))
+  (require 'npg-private)
 #+end_src
 
 ** Temp File
@@ -40,6 +43,13 @@ Use HRS's [[https://github.com/hrs/sensible-defaults.el/][sensible-defaults.el]]
   (sensible-defaults/use-all-keybindings)
 #+end_src
 
+Perhaps backups would be good to have, but let's not have them clutter our current directory. And let's not do autosave or lockfiles, either. I save frequently enough.
+#+begin_src emacs-lisp
+  (setq backup-directory-alist '(("" . "~/.emacs.d/backup")))
+  (setq auto-save-default nil
+        create-lockfiles nil)
+#+end_src
+
 ** Sensible Functions
 Define some sensible utility functions.
 
@@ -55,6 +65,12 @@ Define some sensible utility functions.
     "Kill the current buffer without prompting."
     (interactive)
     (kill-buffer (current-buffer)))
+#+end_src
+
+#+begin_src emacs-lisp
+  (defun npg/disable-line-numbers ()
+    "Shortcut function to disable line numbers."
+    (setq display-line-numbers-mode -1))
 #+end_src
 
 * Custom Functions
@@ -105,6 +121,17 @@ Reclaim real estate, especially on my old X220T, by disabling window chrome.
   (tool-bar-mode 0)
   (menu-bar-mode 0)
   (scroll-bar-mode -1)
+#+end_src
+
+Tooltips generally aren't helpful. Let's just display the information in the
+minibuffer area instead.
+#+begin_src emacs-lisp
+  (tooltip-mode -1)
+#+end_src
+
+Start Emacs maximized.
+#+begin_src emacs-lisp
+  (toggle-frame-maximized)
 #+end_src
 
 ** Theme
@@ -160,9 +187,12 @@ Let's make our shallow tabs into spaces.
 #+end_src
 
 ** Lines
-Give yourself the comfort of context, even if it gobbles some real estate.
+I used to display line numbers globally, but that got to be too much of a pain when I had to picemeal disable numbers for =mu4e=, the agenda, the terminal, and special modes. Now, we just enable line numbers for major programming languages -- those that derive from =prog-mode= -- and all files we open through =find-file=.
 #+begin_src emacs-lisp
-  (global-display-line-numbers-mode)
+  (dolist (lines-mode
+           '(prog-mode-hook
+             find-file-hook))
+    (add-hook lines-mode #'display-line-numbers-mode))
 #+end_src
 
 Also show column numbers in the modeline.
@@ -297,6 +327,41 @@ When splitting a window, I always want focus in the new window.
   (global-set-key (kbd "C-x 3") 'npg/split-window-right-and-switch)
 #+END_SRC
 
+* Completion
+** Ivy
+I will try out Ivy for now, but I'm not against moving to Helm. We use
+=counsel-M-x= for command completion, replace =isearch= with =swiper=, and use
+fuzzy matching everywhere except swiper. (Only exact matches make sense there.)
+
+I prefer the =ido= way of doing things for finding files, so I don't use =counsel-find-file=.
+
+#+begin_src emacs-lisp
+  (use-package counsel
+    :bind
+    ("M-x" . 'counsel-M-x)
+    ("C-s" . 'swiper)
+
+    :init
+    (ivy-mode 1)
+    (use-package flx)
+
+    (setq ivy-use-virtual-buffers t
+          ivy-count-format "(%d/%d)"
+          ivy-initial-inputs-alist nil
+          ivy-re-builders-alist
+            '((swiper . ivy--regex-plus)
+              (t . ivy--regex-fuzzy))))
+#+end_src
+
+** Avy
+Since I'm trying to stay away from =evil= for now, Avy sounds like it might be
+useful. Let's try it out.
+#+begin_src emacs-lisp
+  (use-package avy
+    :ensure t
+    :bind (("M-s" . avy-goto-word-1)))
+#+end_src
+
 * Project Management
 ** =ag=
 Try out the Silver Searcher.
@@ -408,7 +473,7 @@ First, set up =pdf-tools= for full previews, and disable line numbers in PDF buf
   (setq mouse-wheel-follow-mouse t
         pdf-view-resize-factor 1.00)
   (add-hook 'pdf-view-mode-hook
-            (lambda() (display-line-numbers-mode -1))))
+            (npg/disable-line-numbers)))
 #+end_src
 
 Now, we can setup LaTeX. I don't bother setting up RefTeX because I write papers in Org.
@@ -425,6 +490,12 @@ Note, however, that Org also uses these settings to show PDF previews.
           TeX-view-program-list '(("pdf-tools" "TeX-pdf-tools-sync-view")))
     (add-hook 'TeX-after-TeX-LaTeX-command-finished-hook
               #'TeX-revert-document-buffer))
+#+end_src
+
+** JSON
+=json-mode= works well for all I need, and I have a custom yasnippet for Org. We can pretty-print with =C-c C-f=.
+#+begin_src emacs-lisp
+  (use-package json-mode)
 #+end_src
 
 ** Prose
@@ -502,12 +573,6 @@ Use =multi-term= for login shell sessions.
     (setq multi-term-program-switches "--login"))
 #+end_src
 
-Line numbers don't play well with my =zsh= completion, so let's disable them.
-
-#+begin_src emacs-lisp
-  (add-hook 'term-mode-hook
-            (lambda () (display-line-numbers-mode -1)))
-#+end_src
 * Org
  We have already installed the Org package archive, so let's ensure we're using that latest released version with contributions.
  #+begin_src emacs-lisp
